Complete Java 21 compatibility migration by updating remaining service, DTO, and controller layers